--- a/index.html
+++ b/index.html
@@ -3,12 +3,57 @@
 <head>
 	<title></title>
 	<style type="text/css">
+		body{
+			margin: 0px;
+		}
 		h1{
 			text-align: center;
+		}
+		#navbar{
+			background-color: #000000;
+			height: 70px;
+		}
+		#glogo{
+			position: absolute;
+			top: 25px;
+			left: 200px;
+		}
+		#logobt{
+			text-align: center; 
+		}
+		#navmenu{
+			position: relative;
+			top: 30px;
+			left: 700px;
+		}
+		ul{
+			list-style-type: none;
+			padding: 0;
+			margin: 0;
+		}
+		li{
+			display: inline;
+			padding-left: 40px;
+		}
+		li a{
+			color: #ffffff;
+			text-decoration: none;
 		}
 	</style>
 </head>
 <body>
-	<h1>Edgardo E. Gumpay Jr.</h1>
+	<div id="navbar">
+		<img id="glogo" src="res\img\Gblue.png" width="100px" height="80px">
+		<div id="navmenu">
+			<ul>
+				<li><a href="">home</a></li>
+				<li><a href="">about</a></li>
+				<li><a href="">skills</a></li>
+				<li><a href="">projects</a></li>
+				<li><a href="">contact</a></li>
+			</ul>
+		</div>
+	</div>
+	<h1>Galz portfolio website is under construction.</h1>
 </body>
 </html>
