--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 	<title></title>
 	<style type="text/css">
 		body{
-			margin: 0px;
+			margin: 0;
 		}
 		h1{
 			text-align: center;
+			color: #ffffff;
+			margin: 0;
 		}
 		#navbar{
 			background-color: #000000;
+			margin:0;
 			height: 70px;
 		}
 		#glogo{
@@ -22,7 +25,7 @@
 			text-align: center; 
 		}
 		#navmenu{
-			position: relative;
+			position: absolute;
 			top: 30px;
 			left: 700px;
 		}
@@ -39,6 +42,12 @@
 			color: #ffffff;
 			text-decoration: none;
 		}
+		.pages{
+			min-height: 630px;
+		}
+		#home{
+			background-color: #898989;
+		}
 	</style>
 </head>
 <body>
@@ -54,6 +63,8 @@
 			</ul>
 		</div>
 	</div>
-	<h1>Galz portfolio website is under construction.</h1>
+	<div id="home" class="pages">
+		<h1>Galz portfolio website is under construction.</h1>	
+	</div> 
 </body>
 </html>
