--- a/index.html
+++ b/index.html
@@ -2,57 +2,11 @@
 <html>
 <head>
 	<title></title>
-	<style type="text/css">
-		body{
-			margin: 0;
-		}
-		h1{
-			text-align: center;
-			color: #ffffff;
-			margin: 0;
-		}
-		#navbar{
-			background-color: #000000;
-			margin:0;
-			height: 70px;
-		}
-		#glogo{
-			position: absolute;
-			top: 5px;
-			left: 200px;
-		}
-		#logobt{
-			text-align: center; 
-		}
-		#navmenu{
-			position: absolute;
-			top: 30px;
-			left: 700px;
-		}
-		ul{
-			list-style-type: none;
-			padding: 0;
-			margin: 0;
-		}
-		li{
-			display: inline;
-			padding-left: 40px;
-		}
-		li a{
-			color: #ffffff;
-			text-decoration: none;
-		}
-		.pages{
-			min-height: 630px;
-		}
-		#home{
-			background-color: #898989;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div id="navbar">
-		<img id="glogo" src="res\img\Gblue.png" width="80px" height="60px">
+		<img id="glogo" src="res/img/Gblue.png" width="80px" height="60px">
 		<div id="navmenu">
 			<ul>
 				<li><a href="">home</a></li>
@@ -64,7 +18,7 @@
 		</div>
 	</div>
 	<div id="home" class="pages">
-		
+		<img id="galz" src="res/img/Galz.png" width="300px" height="300px">
 	</div> 
 </body>
 </html>
