--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div id="home" class="pages">
-		<img id="galz" src="res/img/Galz.png" width="300px" height="300px">
+		<img id="galz" src="res/img/Galz.PNG" width="300px" height="300px">
 	</div> 
 </body>
 </html>
