--- a/index.html
+++ b/index.html
@@ -2,23 +2,34 @@
 <html>
 <head>
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
+	<script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div id="navbar">
-		<img id="glogo" src="res/img/Gblue.png" width="80px" height="60px">
-		<div id="navmenu">
-			<ul>
-				<li><a href="">home</a></li>
-				<li><a href="">about</a></li>
-				<li><a href="">skills</a></li>
-				<li><a href="">projects</a></li>
-				<li><a href="">contact</a></li>
-			</ul>
+	<div class="container-fluid">
+		<div class="row navbar">
+			<div class="col-sm-2 col-md-4 col-lg-6 col-xl-7">
+				<img id="glogo" src="res/img/Gblue.png" width="80px" height="60px">	
+			</div>
+			<div class="col-sm-10 col-md-8 col-lg-6 col-xl-5">
+				<div id="navmenu">
+					<ul>
+						<li><a href="">home</a></li>
+						<li><a href="">about</a></li>
+						<li><a href="">skills</a></li>
+						<li><a href="">projects</a></li>
+						<li><a href="">contact</a></li>
+					</ul>
+				</div>	
+			</div>
 		</div>
-	</div>
-	<div id="home" class="pages">
-		<img id="galz" src="res/img/galz.png" width="250px" height="250px">
-	</div> 
+		<div class="row">
+			<div id="home" class="pages col-xl-12">
+				<img id="galz" src="res/img/galz.png">
+			</div>	
+		</div>
+	</div>	
 </body>
 </html>
