update css and html

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 	</div>
 	<div class="main">
 		<div id="home">
-			<img id="galz" src="res/img/GalzJr2.png">
-			<div class="NameAndOccupation">
+			<div class="NameAndTitle">
 				<p id="completeName">EDGARDO E GUMPAY JR</p>
 				<p id="occupation">Programmer / Developer / Graphic Designer</p>
+				<hr id="hhline">
+				<div class="intro">
+					<p>Hi their, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
+					<button>Download CV</button>
+				</div>	
 			</div>
-			<hr id="hhline">
-			<div class="intro">
-				<p>Hi their, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
-				<button>Download CV</button>
-			</div>
+			<img id="galz" src="res/img/GalzJr1.png">
 		</div>	
 		<div id="about">
 
