update html and css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	</script>
 </head>
 <body>
-	
 	<div class="navbar">
 		<img id="glogo" src="res/img/Gyellow.png">
 		<pre id="glogodef">G   A   L   Z</pre>	
@@ -32,34 +31,28 @@
 				<li><a class="menuitem active" href="#home">Home</a></li>
 			</ul>		
 		</div>
-		</div>
 	</div>
 	<div class="main">
 		<div id="home">
 			<div class="NameAndTitle">
 				<p id="completeName">EDGARDO E GUMPAY JR</p>
-				<p id="occupation">Programmer / Developer / Graphic Designer</p>
+					<p id="occupation">Programmer / Developer / Graphic Designe</p>
 				<hr id="hhline">
 				<div class="intro">
-					<p>Hi their, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
+						<p>Hi their, you can call me "Galz". I'm a SoftwareDeveloper at the same time a Graphic Designer.</p>
 					<button>Download CV</button>
 				</div>	
 			</div>
 			<img id="galz" src="res/img/GalzJr1.png">
 		</div>	
 		<div id="about">
-
 		</div>
-		<div id="skills">
-				
+		<div id="skills">					
 		</div>
-		<div id="projects">
-			
+		<div id="projects">				
 		</div>
-		<div id="contact">
-			
+		<div id="contact">				
 		</div>
 	</div>
-	
 </body>
 </html>
