--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<p id="occupation">Programmer / Developer / Graphic Designe</p>
 				<hr id="hhline">
 				<div class="intro">
-						<p>Hi their, you can call me "Galz". I'm a SoftwareDeveloper at the same time a Graphic Designer.</p>
+					<p>Hi there, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
 					<button>Download CV</button>
 				</div>	
 			</div>
