--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div id="home">
 			<div class="NameAndTitle">
 				<p id="completeName">EDGARDO E GUMPAY JR</p>
-					<p id="occupation">Programmer / Developer / Graphic Designe</p>
+					<p id="occupation">Programmer / Developer / Graphic Designer</p>
 				<hr id="hhline">
 				<div class="intro">
 					<p>Hi there, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
