--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript">
+	<script src="js/jquery-3.3.1.js"></script>
+	<script>
 		jQuery(document).ready(function(){
 	  		jQuery('ul li a').click(function(){
 	    		jQuery('li a').removeClass("active");
@@ -27,19 +28,19 @@
 				<li><a class="menuitem" href="#contact">Contact</a></li>
 				<li><a class="menuitem" href="#projects">Projects</a></li>
 				<li><a class="menuitem" href="#skills">Skills</a></li>
-				<li><a class="menuitem" href="#about">About</a></li>
+				<li><a class="menuitem" href="#about" >About</a></li>
 				<li><a class="menuitem active" href="#home">Home</a></li>
 			</ul>		
 		</div>
 	</div>
-	<div class="main">
+	<div class="wrap">
 		<div id="home">
 			<div class="NameAndTitle">
 				<p id="completeName">EDGARDO E GUMPAY JR</p>
-					<p id="occupation">Programmer / Developer / Graphic Designer</p>
+				<p id="occupation">Programmer / Developer / GraphicDesigner</p>
 				<hr id="hhline">
 				<div class="intro">
-					<p>Hi there, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
+						<p>Hi there, you can call me "Galz". I'm a Software Developer at the same time a Graphic Designer.</p>
 					<button>Download CV</button>
 				</div>	
 			</div>
