updated navmenu in css added footer to html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 		</div>
 		<div id="projects">				
 		</div>
-		<div id="contact">				
-		</div>
+		<div id="contact">
+		</div>	
+	</div>
+	<div id="gfooter">
+		<p> © <span style="font-style: italic">Copyright</span> 2018 - 2019 </p>
+		<p><span style="font-style: italic">All rights reserved. Powered by </span><span style="color: #cfcfcf">Github Pages</span></p>
 	</div>
 </body>
 </html>
