added contact form

--- a/index.html
+++ b/index.html
@@ -53,11 +53,23 @@
 		<div id="projects">				
 		</div>
 		<div id="contact">
+			<form method="POST" action="https://formspree.io/eegjr28@gmail.com">
+				<label>Name</label>
+				<input name="name" type="text" placeholder="Your complete name . . .">
+					
+				<label>E-mail</label>
+				<input name="email" type="email" placeholder="Your e-mail address . . .">
+					
+				<label>Message</label>
+				<textarea name="message" placeholder="Your message . . ." style="height: 150px"></textarea>
+
+				<input type="submit" value="Send">
+			</form>
 		</div>	
 	</div>
 	<div id="gfooter">
 		<p> © <span style="font-style: italic">Copyright</span> 2018 - 2019 </p>
-		<p><span style="font-style: italic">All rights reserved. Powered by </span><span style="color: #cfcfcf">Github Pages</span></p>
+		<p><span style="font-style: italic">All rights reserved. Powered by </span><span style="color: #d8d8d8">Github Pages</span></p>
 	</div>
 </body>
 </html>
