Hide hire button and increase font size in about quote

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</a>
 		</div> -->
 		
-		<button type="button" class="bg-color-b">Hire</button>
+		<!-- <button type="button" class="bg-color-b">Hire</button> -->
 		</div>
 	</nav>
 	<!-- Home Section -->
@@ -103,15 +103,15 @@
 	<div id="works" class="container-fluid">
 		<div class="row">
 			<div class="col-md-4 col-lg-4 col-xl-4" align="center">
-				<img class="img-responsive" width="200" height="150" src="img/desktopdevelopment.png">
+				<img class="img-responsive" width="150" height="110" src="img/desktopdevelopment.png">
 				<p onclick="hidemobweb()" data-toggle="collapse" data-target="#desktopdev" style="padding-top: 20px">DESKTOP</p>
 			</div>
 			<div class="col-md-4 col-lg-4  col-xl-4" align="center">
-				<img class="img-responsive" width="160" height="150" src="img/mobiledevelopment.png">
+				<img class="img-responsive" width="150" height="125" src="img/mobiledevelopment.png">
 				<p onclick="hidedeskweb()" data-toggle="collapse" data-target="#mobiledev" style="padding-top: 20px">MOBILE</p>
 			</div>
 			<div class="col-md-4 col-lg-4 col-xl-4" align="center">
-				<img class="img-responsive" width="200" height="150" src="img/webdevelopment.png">
+				<img class="img-responsive" width="150" height="110" src="img/webdevelopment.png">
 				<p onclick="hidedeskmob()" data-toggle="collapse" data-target="#webdev" style="padding-top: 20px">WEB</p>
 			</div>
 		</div>
