added cv and updated index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<img class="shadow" id="mypic" src="img/eegjr.png" width="250px" height="250px">
 				<div align="center" style="display: block">
 					<div>Hi, I'm Galz, a Software Developer and Graphic Designer who loves innovation and design.</div>
-					<button>DOWNLOAD CV</button>
+					<a href="documents/Edgardo E Gumpay Jr CV 2019.pdf"><button>DOWNLOAD CV</button></a>
 				</div>
 			</div>	
 		</div>
